assets/css/theme-color/dark-red-theme.css
/*=======================================
Template Design By MarkUps	
Author URI : http://www.markups.io/
========================================*/

.mu-hero-overlay,
.mu-video-overlay {
	background-color: #e72e4c;/* fallback for old browsers */
	background: -webkit-linear-gradient(to right, #2fa4de, #e72e4c);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #2fa4de, #e72e4c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

html a { 
	color: #e72e4c;  
	text-decoration: underline;
}

html a:focus{
	border-width: 2.5px;
	border-style: dashed;
	border-color:  #e72e4c;
}
html a:focus, html a:hover {
	color: #c70526;
}
button.slick-arrow:focus {
	border-width: 2.5px;
	border-style: dashed;
	border-color: black;
}

.mu-primary-btn:hover,
.mu-primary-btn:focus,
.mu-copy-right a:hover,
.mu-copy-right a:focus,
.mu-send-msg-btn:hover,
.mu-send-msg-btn:focus,
.mu-faq-content .panel-title a:hover,
.mu-faq-content .panel-title a:focus,
.mu-faq-content .panel-title a[aria-expanded="true"],
.mu-faq-content .panel-title a>span,
.mu-menu ul li a:hover,
.mu-menu ul li a:focus,
.mu-single-speakers-info p,
.mu-single-speakers-social li a:hover,
.mu-single-speakers-social li a:focus,
.mu-logo,
.mu-logo:hover,
.mu-logo:focus,
#mu-hero .navbar-default .navbar-brand,
.mu-navbar .mu-menu li a:hover,
.mu-navbar .mu-menu li a:focus,
.mu-single-event .mu-event-time {
	color: #e72e4c;
}

.mu-speakers-slider .slick-next,
.mu-speakers-slider .slick-prev,
#mu-venue,
.mu-popular-price .mu-price-tag,
.mu-navbar .navbar-toggle,
.mu-navbar .navbar-toggle:hover,
.mu-navbar .navbar-toggle:focus,
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:focus, 
.navbar-default .navbar-nav > .active > a:hover,
.mu-schedule-menu li a:hover,
.mu-schedule-menu li a:focus,
.mu-schedule-menu li.active a,
.mu-schedule-menu li.active a:hover,
.mu-schedule-menu li.active a:focus {
	background-color: #e72e4c;
}

.mu-social-media a:hover,
.mu-social-media a:focus {
/*	border: 1px solid #e72e4c;*/
	border-width: 2.5px;
	border-style: dashed;
	color: #e72e4c;
}

.mu-contact-form .form-control:focus,
.mu-schedule-menu li a {
	border: 1px solid #e72e4c;    
} 

.mu-send-msg-btn,
.mu-register-btn:hover,
.mu-register-btn:focus,
.mu-popular-price .mu-register-btn {
	border: 1px solid #e72e4c;
	background-color: #e72e4c;
}

.mu-faq-content .panel-default > .panel-heading + .panel-collapse > .panel-body {
	border-top-color: #e72e4c;

}

.mu-reg-submit-btn:hover,
.mu-reg-submit-btn:focus {
	background-color: #e72e4c;
	border: 2px solid #e72e4c;
}

.mu-faq-content .panel-default > .panel-heading + .panel-collapse > .panel-body {
	border-top-color: #e72e4c;

}

